# ComfyUI-EasyUseAnima

./: .comfyignore  .gitignore  MAINTAINING.md  README.en.md  README.ko.md  README.md  __init__.py  api.py  autocomplete_dataset.py  nodes.py  pyproject.toml  settings.py
.github/workflows/: publish_action.yml
anima_prompt/: README.md  correction.py  knowledge.py  parser.py
docs/version-plans/: 0.1.6-Detailer.md  0.1.6.md
locales/ko/: nodeDefs.json
tests/: test_lora_preset.py  test_prompt_corrector.py
web/js/: easyuse_anima_autocomplete.js  easyuse_anima_lora_preset.js  easyuse_anima_naia.js  easyuse_anima_prompt_studio.js  easyuse_anima_settings.js
