[project]
name = "easyuse-anima"
description = "NAIA prompt helper nodes for ComfyUI."
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/n0va39/ComfyUI-EasyUseAnima"
"Bug Tracker" = "https://github.com/n0va39/ComfyUI-EasyUseAnima/issues"

[tool.comfy]
PublisherId = "n0va39"
DisplayName = "ComfyUI EasyUse Anima"
